<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/screen"
    tools:context=".fragments.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/myfont"
                    android:text="@string/home_title"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/_25sdp"
                    android:textStyle="bold" />

                <ImageView
                    style="@style/search_img"
                    android:id="@+id/img_search"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon"
                    android:contentDescription="@string/search_img_description"
                    />
            </LinearLayout>

            <TextView
                style="@style/text_black"
                android:id="@+id/tv_would_like_to_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/myfont"
                android:text="@string/random_meal_title"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/linear_header"
                app:layout_constraintStart_toStartOf="@id/linear_header"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/random_meal_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_would_like_to_eat">

                <ImageView
                    android:id="@+id/img_random_meal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/accent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/random_img_description"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/text_black"
                android:id="@+id/tv_over_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/myfont"
                android:text="@string/popular_meal_title"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_would_like_to_eat"
                app:layout_constraintTop_toBottomOf="@+id/random_meal_card" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_view_meals_popular"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_over_popular">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                style="@style/text_black"
                android:id="@+id/tv_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/myfont"
                android:text="@string/category_meal_title"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/rec_view_meals_popular"
                app:layout_constraintTop_toBottomOf="@+id/rec_view_meals_popular" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_categories">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rec_view_categories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none"/>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>