<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/screen"
    tools:context=".activites.MealActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/accent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Meal Name">

            <ImageView
                android:id="@+id/img_meal_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/img_description"
                />
            
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                />



        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_to_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/favorite"
        app:backgroundTint="@color/accent"
        app:tint="@color/white"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        android:layout_marginEnd="@dimen/_10sdp"
        android:contentDescription="@string/like_img"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:orientation="horizontal"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/text_black"
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/category"
                    android:layout_weight="1"
                    />

                <TextView
                    style="@style/text_black"
                    android:id="@+id/tv_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/area"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <TextView
                style="@style/text_black"
                android:id="@+id/instraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textStyle="bold"
                android:fontFamily="@font/myfont"
                android:textSize="@dimen/_15ssp"
                 />

            <TextView
                style="@style/text_black"
                android:id="@+id/tvInstractionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/instraction"
                app:layout_constraintTop_toBottomOf="@+id/instraction"
                android:layout_marginTop="@dimen/_2sdp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/img_youtube"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="bottom|start"
        android:src="@drawable/youtube"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_60sdp"
        android:contentDescription="@string/youtube_img_description"
        />

    <ImageView
        android:id="@+id/img_share"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="bottom|end"
        android:src="@drawable/share"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_60sdp"
        android:contentDescription="@string/share_img_description"
        />



    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom"
        android:visibility="gone"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>